# impetus-impresario

./: .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  README.md  SECURITY.md
designer/: README.md
docs/BPMN/: BPMN.md
docs/architecture/: Actions.md  Architecture.drawio  Entities.md  Features.md  Permissions.md
engine/: Cargo.toml  README.md
engine/core/: Cargo.toml
engine/core/src/: lib.rs
engine/server/: Cargo.toml
engine/server/src/: main.rs
engine/src/: lib.rs  main.rs
ui/: README.md
