[package]
name = "impetus-impresario"
version = "0.1.0-alpha.1"
description = "Impetu Impresario (II) is a performant, scalable process automation and orchestration platform."
license = "GPL-3.0-or-later"
keywords = ["bpmn", "dmn", "orchestration", "workflow", "process"]
repository = "https://github.com/JEleniel/impetus-impresario"
publish = false
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
axum = { version = "0.8", features = ["http2", "json", "macros", "tokio", "tower-log", "form", "query"] }
config = { version = "0.15", features = ["json"] }
fern = { version = "0.7", features = ["chrono", "colored"] }
serde_json = { version = "1.0" }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ['full'] }
