[workspace]
members = ["core", "server"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["JEleniel <https://github.com/JEleniel"]
documentation = "https://JEleniel.github.io/impetus-impresario/"
description = "The II Engine provides a robust and scalable execution environment. It supports real-time process execution, decision activation, and integration with other systems through either its RESTful API or as an embedded library."

[workspace.dependencies]
impetus-impresario-core = { path = "core" }

[profile.dev]
opt-level = 1
codegen-units = 128

[profile.release]
strip = true
lto = true
